# font_translator_gan

./: .gitignore  experiment.py  gt_list.pkl  pyproject.toml  test.py  train.py  train.sh
data/: __init__.py  dfs_dataset.py  font_dataset.py  image_folder.py
datasets/: utils.py
evaluator/: __init__.py  dataset.py  evaluator.py  fid.py  resnet.py  ssim.py
models/: base_model.py  dfs_model.py  emd_model.py  font_translator_gan_model.py  networks.py
options/: base_options.py
src/: config.py  constants.py
src/dataset/: custom_dataset.py
src/loss/: gan_loss.py
src/model/: discriminator.py  font_trans_gan.py  generator.py  loss.py  utils.py
tests/dataset/: test_custom_dataset.py
util/: visualizer.py
