[tool.poetry]
name = "ftg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=0.4.1"
torchvision = ">=0.2.1"
dominate = ">=2.3.1"
visdom = ">=0.1.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
